--- a/orderbook-server/package.json
+++ b/orderbook-server/package.json
@@ -10,23 +10,29 @@
     "watch": "nodemon --exec ts-node src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["trading", "orderbook", "exchange"],
+  "keywords": [
+    "trading",
+    "orderbook",
+    "exchange"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "express": "^5.1.0",
+    "redis": "^5.8.0",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.3",
+    "zod": "^4.0.17"
+  },
+  "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.2.1",
     "@types/redis": "^4.0.10",
     "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.12",
-    "express": "^5.1.0",
-    "redis": "^5.8.0",
+    "@types/ws": "^8.18.1",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.2",
-    "uuid": "^11.1.0",
-    "ws": "^8.18.0",
-    "zod": "^4.0.17",
-    "nodemon": "^3.1.7"
+    "typescript": "^5.9.2"
   }
 }
